--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -4,9 +4,16 @@
         <table class="table table-sm table-borderless">
             <tr class="flex">
                 <td><i class="fa fa-caret-right main-name"></i></td>
+                <td class="main-name"><b> PhD Student </b></td>
+                <td> <a href="https://networks.imdea.org/">IMDEA Networks Institute</a>, Madrid, Spain  </td>
+                <td scope="row" class="lec-years" >2023 - Present</td>
+            </tr>
+
+            <tr class="flex">
+                <td><i class="fa fa-caret-right main-name"></i></td>
                 <td class="main-name"><b> Researcher </b></td>
                 <td> <a href="https://scorelab.org">SCoRe Lab</a>, Sri Lanka  </td>
-                <td scope="row" class="lec-years" >2021 - Present</td>
+                <td scope="row" class="lec-years" >2021 - 2023</td>
             </tr>
 
             <tr class="flex">
