--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -52,7 +52,7 @@ layout: default
         <div class="contact-icons">
             {% include social.html %}
         </div>
-	  <div class="contact-note"><i class="fas fa-phone-alt"></i> {{ site.contact_note }}</div>
+	  <div class="contact-note"><i class="fa-brands fa-whatsapp"></i> {{ site.contact_note }}</div>
     </div>
     {% endif %}
   </article>
