update for 2023 - add og

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,10 +30,10 @@
       "https://medium.com/@niweera",
       "https://blog.niweera.gq"
     ],
-    "jobTitle": "Researcher",
+    "jobTitle": "PhD Student",
     "worksFor": {
       "@type": "Organization",
-      "name": "SCoRe Lab (https://scorelab.org)"
+      "name": "IMDEA Networks Institute (https://networks.imdea.org/)"
     }
   }
 </script>
